# TestingPurpose

./: README.md  main.py  pyproject.toml  requirements.txt
src/: audio_capture.py  common_misspellings.json  hinglish_symptoms.json  nlu_config.json  nlu_processor.py  prompts.py  response_generator.py  symptom_checker.py  symptom_knowledge_base.json  ui.py  utils.py
